[gd_scene load_steps=6 format=3 uid="uid://bhrieo2dhroxj"]

[ext_resource type="Script" uid="uid://blc70goak5ixm" path="res://addons/_Godot-IDE_/plugins/fancy_filters_script/components/settings.gd" id="1_8gu0h"]
[ext_resource type="StyleBox" uid="uid://dwpkbhgi7dk8" path="res://addons/_Godot-IDE_/plugins/fancy_filters_script/assets/flatbox.tres" id="1_e4fgx"]
[ext_resource type="Texture2D" uid="uid://c2oodbi52ec3m" path="res://addons/_Godot-IDE_/shared_resources/down.svg" id="3_f6f5j"]
[ext_resource type="Script" uid="uid://drngb2pss3dtj" path="res://addons/_Godot-IDE_/plugins/fancy_filters_script/components/tab_container.gd" id="3_g0drt"]
[ext_resource type="Script" uid="uid://b1v225muollg5" path="res://addons/_Godot-IDE_/plugins/fancy_filters_script/button.gd" id="4_f6f5j"]

[node name="Settings" type="VBoxContainer" node_paths=PackedStringArray("_type_members", "_accessibility", "sorty_name_enabled", "order_name_check", "order_name_button", "background_color", "use_dots")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8gu0h")
_type_members = NodePath("Type")
_accessibility = NodePath("Accessibility")
sorty_name_enabled = NodePath("order_name_check_button")
order_name_check = NodePath("order_name_check_button")
order_name_button = NodePath("order_name")
background_color = NodePath("use_background_color_in_script_info")
use_dots = NodePath("use_dots_as_item_icons")

[node name="order_name_check_button" type="CheckBox" parent="."]
layout_mode = 2
size_flags_horizontal = 0
button_pressed = true
text = "Enable Order By Name"
script = ExtResource("4_f6f5j")

[node name="order_name" type="Button" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Make sorty by using the name member."
text = "Sort Name"
icon = ExtResource("3_f6f5j")
icon_alignment = 2
script = ExtResource("4_f6f5j")

[node name="Sep3" type="HSeparator" parent="."]
layout_mode = 2

[node name="Label6" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 0
text = "Order By Members (Drag and Drop)"

[node name="Type" type="TabContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Change order by drag values."
theme_override_styles/tab_focus = ExtResource("1_e4fgx")
theme_override_styles/tab_disabled = ExtResource("1_e4fgx")
theme_override_styles/tabbar_background = ExtResource("1_e4fgx")
theme_override_styles/panel = ExtResource("1_e4fgx")
theme_override_styles/tab_selected = ExtResource("1_e4fgx")
theme_override_styles/tab_hovered = ExtResource("1_e4fgx")
theme_override_styles/tab_unselected = ExtResource("1_e4fgx")
current_tab = 0
drag_to_rearrange_enabled = true
script = ExtResource("3_g0drt")

[node name="Properties" type="Control" parent="Type"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Methods" type="Control" parent="Type"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Signals" type="Control" parent="Type"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Constant" type="Control" parent="Type"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Sep" type="HSeparator" parent="."]
visible = false
layout_mode = 2

[node name="accessibility2" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Order By Accesibility (Drag and Drop)"

[node name="Accessibility" type="TabContainer" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/tab_focus = ExtResource("1_e4fgx")
theme_override_styles/tab_disabled = ExtResource("1_e4fgx")
theme_override_styles/tabbar_background = ExtResource("1_e4fgx")
theme_override_styles/panel = ExtResource("1_e4fgx")
theme_override_styles/tab_selected = ExtResource("1_e4fgx")
theme_override_styles/tab_hovered = ExtResource("1_e4fgx")
theme_override_styles/tab_unselected = ExtResource("1_e4fgx")
current_tab = 0
drag_to_rearrange_enabled = true
script = ExtResource("3_g0drt")

[node name="Export" type="Control" parent="Accessibility"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Static" type="Control" parent="Accessibility"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Public" type="Control" parent="Accessibility"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Virtual" type="Control" parent="Accessibility"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Private" type="Control" parent="Accessibility"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="Sep2" type="HSeparator" parent="."]
layout_mode = 2

[node name="use_dots_as_item_icons" type="CheckBox" parent="."]
layout_mode = 2
size_flags_horizontal = 0
button_pressed = true
text = "Use Dots As Script Info Items Icons"
script = ExtResource("4_f6f5j")

[node name="use_background_color_in_script_info" type="CheckBox" parent="."]
layout_mode = 2
size_flags_horizontal = 0
button_pressed = true
text = "Use Background Colors in Script Info Items"
script = ExtResource("4_f6f5j")
